--- a/nutricloud-webforms/MasterPro.Master
+++ b/nutricloud-webforms/MasterPro.Master
@@ -9,35 +9,35 @@
     <title>nutricloud</title>
 
     <!-- CSS  -->
-    <link href="../../content/materialize.css" type="text/css" rel="stylesheet">
-    <link href="../../content/style.css" type="text/css" rel="stylesheet">
-    <link href="../../content/LayoutStyle.css" type="text/css" rel="stylesheet">
-    <link href="../../content/stylepro.css" type="text/css" rel="stylesheet">
-    <link href="../../content/responsive.css" type="text/css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../../scripts/jquery.min.js">
+    <link href="/content/materialize.css" type="text/css" rel="stylesheet">
+    <link href="/content/style.css" type="text/css" rel="stylesheet">
+    <link href="/content/LayoutStyle.css" type="text/css" rel="stylesheet">
+    <link href="/content/stylepro.css" type="text/css" rel="stylesheet">
+    <link href="/content/responsive.css" type="text/css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/scripts/jquery.min.js">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-    <script src="../../scripts/modernizr.js"></script>
+    <script src="/scripts/modernizr.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300|Righteous' rel='stylesheet' type='text/css'>
 
     <!-- Icon -->
-    <link rel="apple-touch-icon" sizes="57x57" href="../../content/img/icon/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="../../content/img/icon/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="../../content/img/icon/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="../../content/img/icon/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="../../content/img/icon/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="../../content/img/icon/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="../../content/img/icon/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="../../content/img/icon/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="../../content/img/icon/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="../../content/img/icon/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../content/img/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../../content/img/icon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../content/img/icon/favicon-16x16.png">
-    <link rel="manifest" href="../../content/img/icon/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="/content/img/icon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/content/img/icon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/content/img/icon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/content/img/icon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/content/img/icon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/content/img/icon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/content/img/icon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/content/img/icon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/content/img/icon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/content/img/icon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/content/img/icon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/content/img/icon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/content/img/icon/favicon-16x16.png">
+    <link rel="manifest" href="/content/img/icon/manifest.json">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="../../content/img/icon/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="/content/img/icon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
 <body id="top" class="scrollspy">
@@ -59,7 +59,8 @@
                     <div class="container">
                         <div class="nav-wrapper sticky">
                             <a id="logo-container" href="/Profesionales/Home.aspx" class="brand-logo">
-                                <img src="../../content/img/logo.png">nutricloud
+                                <%--<img src="../../content/img/logo.png">nutricloud--%>
+                                <img src="/Content/img/logo.png">nutricloud
                             </a>
                             <ul id="nav-mobile" class="right side-nav">
                                 <li><a href="/Pages/Buscador.aspx">Alimentos</a></li>
@@ -180,7 +181,7 @@
         });
     </script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script type="text/javascript" src="../../scripts/DateTimePicker.min.js"></script>
+    <script type="text/javascript" src="/scripts/DateTimePicker.min.js"></script>
 
     <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
     <script src="//code.jquery.com/jquery-1.10.2.js"></script>
