--- a/nutricloud-webforms/Content/materialize.css
+++ b/nutricloud-webforms/Content/materialize.css
@@ -5837,7 +5837,7 @@ a.waves-effect .waves-ripple {
   box-sizing: border-box; }
   .collapsible-body p {
     margin: 0;
-    padding: 2rem; }
+    padding: 0; }
 
 ul.side-nav ul.collapsible {
   border: none;
