--- a/nutricloud-webforms/Content/style.css
+++ b/nutricloud-webforms/Content/style.css
@@ -422,7 +422,7 @@ xtype
         font-size: 37px;
         line-height: 43px;
         color: #f1f8e9;
-        margin-top: 159px;
+        /*margin-top: 159px;*/
     }
 
 .img-resp img {
@@ -1553,3 +1553,52 @@ input#ContentPlaceHolder1_ucMensajes_btnenviar {
     }
 
     .jqplot-table-legend { width: auto; }
+
+.recomendacion {
+    display: none;
+}
+
+.btn_rec {
+    font-size: 13px;
+    padding: 0px 10px;
+    margin-top: 4px;
+    width: 100%;
+    color: black;
+}
+#ContentPlaceHolder1_RecomendacionesAyer_divRecomendaciones .card .card-content .card-title{
+        width: 100%;
+    text-align: center;
+    display: block;
+    border-bottom: solid 1px rgba(99, 96, 96, 0.3);
+    margin-bottom: 7px;
+}
+#rec .collapsible-header{
+        background: rgba(67, 218, 149, 0.16);
+}
+.downloadP{
+        text-align: center;
+    margin: 70px auto;
+    display: block;
+    float: none !important;
+    width: 50%;
+}
+.fast-charge{
+    float: right;
+}
+.fast-charge a{
+    margin: 0;
+}
+.jqplot-target table{
+    right: 44px !important;
+}
+.moreinfoR .collapsible-body{
+    padding: 20px;
+}
+ #ContentPlaceHolder1_RecomendacionesQuince_lblErrorAyer{
+     line-height: 40px;
+     font-size: 16px;
+ }
+ .listaRecetas .collection-item{
+         height: 150px;
+    overflow: hidden;
+ }
