--- a/nutricloud-webforms/Anon.Master
+++ b/nutricloud-webforms/Anon.Master
@@ -84,14 +84,41 @@
             <div class="row nobottom">
 
                 <div class="col l6 s12">
+                    <h5 class="white-text">Nosotros</h5>
                     <p class="grey-text text-lighten-4">
                         Nutricloud es comer saludable y vivir mejor.<br />
                         2016&reg; Todos los derechos reservados.
                     </p>
 
+
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">nutricloud</h5>
+                    <ul>
+                        <li><a class="white-text" href="#">Home</a></li>
+                        <li><a class="white-text" href="#">Social</a></li>
+                        <li><a class="white-text" href="#">Diario</a></li>
+                        <li><a class="white-text" href="#">Contacto</a></li>
+
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">Social</h5>
+                    <ul>
+                        <li><a class="white-text" href="#">Instagram</a></li>
+                        <li><a class="white-text" href="#">Facebook</a></li>
+                        <li><a class="white-text" href="#">Twitter</a></li>
+                        <li><a class="white-text" href="#">Google+</a></li>
+                    </ul>
                 </div>
             </div>
         </div>
+        <!--
+    <div class="footer-copyright  grey darken-3">
+      <div class="container">
+        Made by <a class="white-text" href="#">Nutricloud</a>
+      </div>
+    </div>-->
     </footer>
 
 
